test/trivial/roxana/test_param_decl2.chpl
var t : integer;
parameter h = t;
write(h);